@@ -49,8 +49,8 @@ $(function(){
 				data: "list_slug=" + list_slug,
 				success: function(msg) {
 					if (msg.indexOf("success") >= 0) {
+						updateSentTip("Successfully deleting " + list_slug, 3000, "success");
 						$this.parent().parent().parent().fadeOut("fast");
-						updateSentTip("Successfully deleting " + list_id, 3000, "success");
 					} else {
 						updateSentTip("Delete failed. Please try again.", 3000, "failure");
 					}
@@ -69,6 +69,7 @@ $(function(){
 		$("#list_description").val("");
 		$("#list_protect").removeAttr("checked");
 		$("#pre_list_name").val("");
+		$("#list_spanid").val("");
 		$("#is_edit").val(0);
 		$("#list_submit").val("Create");
 	});
@@ -77,7 +78,7 @@ $(function(){
 		e.preventDefault();
 		var parent = $(this).parent().parent();
 		var list_name = parent.find(".rank_name").text().split("/")[1];
-		var list_description = parent.find(".rank_description").text().slice(3);
+		var list_description = parent.find(".rank_description").text().slice(5);
 		var list_protect = parent.find(".rank_count").text().indexOf("Private") > 0;
 
 		$("#list_form").show("fast");
@@ -88,12 +89,69 @@ $(function(){
 		} else {
 			$("#list_protect").removeAttr("checked");
 		}
+		$("#list_spanid").val(parent.attr("id"));
 		$("#is_edit").val(1);
 		$("#list_submit").val("Edit");
 		$("#pre_list_name").val(list_name);
 	})
 	
-	
+	$("#list_submit").click(function(e){
+		e.preventDefault();
+		var list_name = $("#list_name").val();
+		if (list_name.length == 0) {
+			window.alert("List name cannot be empty!");
+			return;
+		}
+		$('#list_form').slideToggle(300);
+		var list_description = $("#list_description").val();
+		var list_protect = $("#list_protect").attr("checked") == "checked" ? "private" : "public";
+		var pre_list_name = $("#pre_list_name").val();
+		var is_edit = $("#is_edit").val();
+		var postdata = {"name" : list_name,
+				"description" : list_description,
+				"mode" : list_protect};
+		if (is_edit == 1) {
+			postdata["slug"] = pre_list_name;
+			updateSentTip("editing list " + pre_list_name + "...", 5000, "ing");
+			var spanid = $("#list_spanid").val();
+		} else
+			updateSentTip("creating list " + list_name + "...", 5000, "ing");
+			
+		$.ajax({
+			url: "ajax/modifyList.php",
+			type: "POST",
+			dataType: "json",
+			data: postdata,
+			success: function(msg) {
+				if (msg.result == 'success') {
+					if (is_edit == 1) {
+						updateSentTip("Successfully modifying list " + pre_list_name, 3000, "success");
+						var rank_content = $("#"+spanid);
+						rank_content.find(".rank_name").html('<a href="list.php?id='+msg.listuri+'"><em>'+msg.username+'/</em>'+list_name+'</a>');
+						var rank_count = rank_content.find(".rank_count");
+						rank_count.html(rank_count.html().replace(/Public|Private/, list_protect == "public" ? "Public" : "Private"));
+						rank_content.find(".rank_description").html("Bio: "+list_description);
+					}
+					else {
+						updateSentTip("Successfully creating list " + list_name, 3000, "success");
+						var html = '<li><span class=\"rank_img\"><img src="'+msg.imgurl+'" /></span>';
+						html += '<div class="rank_content" id="'+msg.contentid+'"><span class="rank_num"><span class="rank_name">';
+						html +='<a href="list.php?id='+msg.listuri+'"><em>'+msg.username+'/</em>'+list_name+'</a>';
+						html += '</span></span><span class="rank_count">Followers: 0&nbsp;&nbsp;Members: 0&nbsp;&nbsp;'+(list_protect == "public" ? "Public" : "Private")+'</span>';
+						html += '<span class="rank_description">Bio: '+list_description+'</span>';
+						html += '<span id="list_action"><a id="btn" href="#" class="edit_list">Edit</a> <a id="btn" href="#" class="delete_list">Delete</a> <a id="btn" href="#" class="add_member">Add Members</a></span>';
+						html += "</div></li>";
+						$(html).prependTo($(".rank_list")).fadeIn('fast');
+					}
+				} else {
+					if (is_edit == 1)
+						updateSentTip("Editing failed. Please try again.", 3000, "failure");
+					else
+						updateSentTip("Creating failed. Please try again.", 3000, "failure");
+				}
+			}
+		});
+	});
 	
 	$(".add_member").click(function(e){
 		e.preventDefault();
@@ -126,7 +184,9 @@ $(function(){
                         $.ajax({
                                 url: "ajax/addMembersToList.php",
                                 type: "POST",
-                                data: "slug=" + list_name + "&owner=" + owner_name + "&add_members=" + list_members,
+                                data: {	"slug" : list_name,
+					"owner" : owner_name,
+					"add_members" : list_members},
                                 success: function(msg) {
                                         if (msg.indexOf("error") >= 0) {
                                                 updateSentTip("Adding failed. Please try again.", 3000, "failure");
