@@ -1,3 +1,6 @@
+Sun Mar 10 16:13:05 CST 2013	<shadowglen@me.com>
+* Changed lists create/edit function to ajax style
+
 Sat Mar  9 22:17:51 CST 2013	<shadowglen@me.com>
 * Fixed member deletion function of list
 
@@ -45,7 +48,7 @@ TODO:
 * User page: unable to load DM context box when click a user's avatar on tweet and chose Send Me a Message
   * Possible reason: AJAX bug
 
-* Lists page: request/response style of create/edit different than other functions
+* Lists page: newly created list cannot response to edit/delete/add_members operation
   * Related files: lists.php, js/lists.js
 
 * Clean up messed code
